hphp/hack/test/enum_atom/typing/atom.php.exp
File "atom.php", line 10, characters 23-23:
Attribute __Atom is only allowed on \HH\EnumMember (Typing[4395])
File "atom.php", line 30, characters 3-8:
Unknown constant C in EE (Typing[4394])
File "atom.php", line 30, characters 6-7:
Atoms are not allowed in this position. They are only allowed in function call, if the function parameter is annotated with __Atom (Typing[4396])
File "atom.php", line 35, characters 16-36:
When using __Atom, only type parameters bounded by enum classes and enum classes are allowed as the first parameters of \HH\EnumMember (Typing[4395])
